fix: change code name for dark mode to dark instead of no

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -178,10 +178,10 @@ a.navbar-link:hover {
   color: $dark-grey;
 }
 
-/* NORD MODE */
+/* DARK MODE */
 
-[data-theme='nord'],
-[data-theme='nord'] body {
+[data-theme='dark'],
+[data-theme='dark'] body {
   background-color: $nord0;
   color: $nord8;
 
